<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/smooth_navigation_bottom"
    app:startDestination="@+id/nv_video">

    <fragment
        android:id="@+id/nv_video"
        android:name="com.example.axgleapi.ui.fragment.VideoFragment"
        android:label="@string/title_bsn_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nv_category"
        android:name="com.example.axgleapi.ui.fragment.CategoryFragment"
        android:label="@string/title_bsn_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nv_collection"
        android:name="com.example.axgleapi.ui.fragment.CollectionFragment"
        android:label="@string/title_bsn_collections"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/nv_search"
        android:name="com.example.axgleapi.ui.fragment.SearchFragment"
        android:label="@string/title_bsn_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nv_favorite"
        android:name="com.example.axgleapi.ui.fragment.FavoriteFragment"
        android:label="@string/title_bsn_favorite"
        tools:layout="@layout/fragment_favorite" />

</navigation>